--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,106 @@ margin-bottom: 45px;
 .rocket {
     position: absolute;
     top: 10px;
-    right: 0;
+    right: 0px;
     z-index: 99;
+    max-width: 300px;
+}
+.footer {
+    padding: 130px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.footer-nav .item-link {
+    font-size: 18px;
+    line-height: 21px;
+
+}
+.footer .logo {
+    margin-bottom: 43px;
+
+}
+.footer-nav {
+    margin-bottom: 28px;
+}
+.footer-text  {
+    font-size: 18px;
+    line-height: 21px;
+    color: #808080;
+    text-decoration: none;
+    margin-bottom: 30px;
+    margin-top: 0;
+
+}
+.footer-link{
+    color: #808080;
+    text-decoration: none;
+}
+.button {
+    color: white;
+    min-width: 260px;
+    padding: 20px;
+    text-align: center;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 6px;
+    text-decoration: none;
+}
+@media(max-width: 960px) {
+    .rocket {
+        max-width: 200px;
+    }
+    .table-column {
+        width: 200px;
+    }
+}
+@media(max-width: 768px) {
+    .header {
+        flex-direction: column;
+        align-items: center;
+    }
+    .header .logo {
+        margin-bottom: 20px;
+    }
+    .header .main-nav {
+        margin-bottom: 20px;
+    }
+    .video {
+        width: 100%;
+    }
+    .rocket {
+        max-width: 170px;
+    }
+ 
+}
+@media(max-width: 576px) {
+  
+    .rocket {
+        position: static;
+    }
+    .table {
+        margin-bottom: 0;
+    }
+    .table-column {
+        font-size: 14px;
+        width: 150px;
+    }
+    .footer-nav .list {
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+    .footer-nav .item {
+        margin-bottom: 10px;
+    }
+    .footer {
+        text-align: center;
+    }
+    .main {
+        padding-top: 50px;
+    }
+    .features {
+        padding-bottom: 0;
+    }
 }
